--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
         with:
           node-version: 20
       - run: npm install
-      - run: npm run build
+      - name: Build with electron-builder (no publish)
+        run: npx electron-builder -w --config electron-builder.yml --publish=never
       - uses: actions/upload-artifact@v4
         with:
           name: ws-broadcaster-dist
